# Saint-Nec-Engine

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake.yml
Doc/SprintReviews/: Sprint_1.md  Sprint_2.md  Sprint_3.md  Sprint_4.md  Sprint_5.md  Sprint_6.md  Sprint_7.md  Sprint_8.md
Doc/UML/: Base_Architecture.mdj
Saint-Nec-Engine/: CMakeLists.txt  CMakePresets.json  README.md  Saint-Nec-Engine.sln
Saint-Nec-Engine/CommonLib/: CommonLib.vcxproj  CommonLib.vcxproj.filters  Component.h  GameObject.h  Scene.h  SceneManager.cpp  SceneManager.h
Saint-Nec-Engine/GraphicLib/: GraphicLib.vcxproj
Saint-Nec-Engine/Lib-Saint-Nec-Engine/: Lib-Saint-Nec-Engine.cpp  Lib-Saint-Nec-Engine.vcxproj  Lib-Saint-Nec-Engine.vcxproj.filters
Saint-Nec-Engine/Physics-Lib/: CMakeLists.txt
Saint-Nec-Engine/PhysicsLib/: PhysicsLib.cpp  PhysicsLib.vcxproj  PhysicsLib.vcxproj.filters
Saint-Nec-Engine/Saint-Nec-Engine/: CMakeLists.txt  Saint-Nec-Engine.vcxproj  Saint-Nec-Engine.vcxproj.filters  resource.h
Saint-Nec-Engine/Saint-Nec-Engine-Lib/: CMakeLists.txt  Saint-Nec-Engine-Lib.vcxproj  Saint-Nec-Engine-Lib.vcxproj.filters
Saint-Nec-Engine/Saint-Nec-Engine-Lib/src/: CMakeLists.txt
Saint-Nec-Engine/Saint-Nec-Engine-Lib/src/Physics/: BoxCollider.cpp  BoxCollider.hpp  SphereCollider.cpp  SphereCollider.hpp
Saint-Nec-Engine/Saint-Nec-Engine-Lib/src/Physics-Lib/src/: BoxCollider.cpp  BoxCollider.hpp  SphereCollider.cpp  SphereCollider.hpp
Saint-Nec-Engine/Saint-Nec-Engine-Lib/src/architecture/: Camera.cpp  Camera.hpp  Component.cpp  Component.h  Component.hpp  Forme.cpp  Forme.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  Input.cpp  Input.hpp  PhysicManager.cpp  PhysicManager.hpp  Scene.cpp  Scene.h  Scene.hpp  SceneManager.cpp  SceneManager.h  SceneManager.hpp  Time.cpp  Time.hpp  Vector3.cpp  Vector3.hpp  Window.cpp  Window.hpp  util.cpp  util.hpp
Saint-Nec-Engine/Saint-Nec-Engine-Lib/src/graphics/: Cube.cpp  Cube.hpp  GraphicComponent.cpp  GraphicComponent.hpp  Plane.cpp  Plane.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Sphere.cpp  Sphere.hpp  TessellatedPlane.cpp  TessellatedPlane.hpp
Saint-Nec-Engine/Saint-Nec-Engine-Lib/src/physics/: BoxCollider.cpp  BoxCollider.hpp  Collider.hpp  GJK.cpp  GJK.hpp  Interaction.cpp  Interaction.hpp  Minkowski.hpp  PhysicObject.cpp  PhysicObject.hpp  SAT.cpp  SAT.hpp  SphereCollider.cpp  SphereCollider.hpp  algorithms.cpp  algorithms.hpp  util.cpp  util.hpp
Saint-Nec-Engine/Saint-Nec-Engine-Test/: CMakeLists.txt  README.md
Saint-Nec-Engine/Saint-Nec-Engine-Test/Dependencies/: CMakeLists.txt
Saint-Nec-Engine/Saint-Nec-Engine-Test/test/: MinkowskiSum.py  logFile.hpp  physicCalculator.py  pygraph.py  test1.cpp  testBox.cpp  testCollision.cpp  testCollisionGJK.cpp  testEPA.cpp  testInteraction.cpp  testManager.cpp  testSphere.cpp
Saint-Nec-Engine/Saint-Nec-Engine-Test/test/data/: points.txt  testInteraction.txt
Saint-Nec-Engine/Saint-Nec-Engine/Dependencies/: CMakeLists.txt
Saint-Nec-Engine/Saint-Nec-Engine/Dependencies/GLAD/include/: CMakeLists.txt
Saint-Nec-Engine/Saint-Nec-Engine/Dependencies/GLAD/include/glad/: glad.h
Saint-Nec-Engine/Saint-Nec-Engine/Dependencies/imgui/: CMakeLists.txt
Saint-Nec-Engine/Saint-Nec-Engine/resources/shaders/: basic.frag  basic.vert  color.frag  color.vert  skybox.vert  sphere.frag  sphere.vert  texture.frag
Saint-Nec-Engine/Saint-Nec-Engine/resources/shaders/grassShader/: grass.frag  grass.vert
Saint-Nec-Engine/Saint-Nec-Engine/resources/shaders/terrain/: basic_terrain.frag  basic_terrain.vert
Saint-Nec-Engine/Saint-Nec-Engine/resources/shaders/terrain/tessellation/: tessellation.frag  tessellation.tesc  tessellation.tese  tessellation.vert
Saint-Nec-Engine/Saint-Nec-Engine/resources/shaders/water/: water.frag  water.vert
Saint-Nec-Engine/Saint-Nec-Engine/src/: Application.cpp  Colors.hpp  Game.cpp  Game.hpp  Saint-Nec-Engine.cpp  Saint-Nec-Engine.h  glad.c
Saint-Nec-Engine/Saint-Nec-Engine/src/grass/: GrassChunkComponent.cpp  GrassChunkComponent.hpp  GrassComponent.cpp  GrassComponent.hpp
Saint-Nec-Engine/Saint-Nec-Engine/src/scenes/: EPAScene.cpp  EPAScene.hpp  FirstScene.cpp  FirstScene.hpp  GrassScene.cpp  GrassScene.hpp  MouvementCoordination.cpp  MouvementCoordination.hpp  PICollisions.cpp  PICollisions.hpp  PhysicScene.cpp  PhysicScene.hpp  PhysicScene2.cpp  PhysicScene2.hpp  WaterGenerationScene.cpp  WaterGenerationScene.hpp
Saint-Nec-Engine/Saint-Nec-Engine/src/terrain/: TerrainScene.cpp  TerrainScene.hpp  TessellationTerrain.cpp  TessellationTerrain.hpp
Saint-Nec-Engine/Saint-Nec-Engine/src/terrain/components/: TerrainComponent.cpp  TerrainComponent.hpp
Saint-Nec-Engine/Saint-Nec-Engine/src/ui_builder/: UIBuilder.cpp  UIBuilder.hpp
Saint-Nec-Engine/Saint-Nec-Engine/src/ui_helper/: UiHelper.cpp  UiHelper.hpp
Saint-Nec-Engine/TEST/: CMakeLists.txt
Saint-Nec-Engine/TEST/Dependencies/CATCH/: CMakeLists.txt
Saint-Nec-Engine/TEST/test/: main_test.cpp  test1.cpp
